--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -1,6 +1,6 @@
 
-<div style="width: 65%; height: 122rem; display: flex; flex-direction: column; margin: auto;overflow-y:clip;">
-    <p style="margin: auto; margin-top: 2rem;">* It is an embbed version, for a better visualization access <a href="https://docs.google.com/document/d/e/2PACX-1vQcMgHYb2dw7HjpKeYOUaB0KQpzw1JyOPi6sHOpiHILD7SFUUEYhHODVUEo2vJyUw/pub" target="_blank">here</a></p> 
+<div  class="container">
+    <p style="margin: auto; margin-top: 2rem;">* It is an embedded version, for a better visualization, access <a href="https://docs.google.com/document/d/e/2PACX-1vQcMgHYb2dw7HjpKeYOUaB0KQpzw1JyOPi6sHOpiHILD7SFUUEYhHODVUEo2vJyUw/pub" target="_blank">here</a></p> 
     <iframe id="cvgoogle"  src="https://docs.google.com/document/d/e/2PACX-1vQcMgHYb2dw7HjpKeYOUaB0KQpzw1JyOPi6sHOpiHILD7SFUUEYhHODVUEo2vJyUw/pub?embedded=true"></iframe>
 
    
