refactor: text updated

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -85,12 +85,12 @@
             <hr>
             <div class="text">
                 <h1>Chi Voto</h1>
-                <h3>Social Project</h3>
-                <h4>A web application that provides information for Italians citizens about the European Elections 2024.</h4>
+                <h3>Social Impact Project</h3>
+                <h4>A web application that provides information for Italians citizens about the European Elections 2024 and all the candidates involved.</h4>
                 <h2>Problem:</h2>
-                <p>A previously nonexistent place where Italian citizens can read and learn more about the European elections, Italian parties, and candidates in an accessible and user-friendly way.</p>
+                <p>Italy has an abstention rate of around 50% in democratic elections, as many people see European institutions as distant and feel frustrated with politics; A previously nonexistent place where Italian citizens can read and learn more about the European elections, Italian parties, and candidates in an accessible and user-friendly way.</p>
                 <h2>Solution:</h2>
-                <p>Chi Voto provides information about the electoral process for the European elections, including how to vote, the Italian parties with their respective electoral programs, and the list of candidates. Additionally, the portal serves as a tool to support a democratic electoral process by giving candidates who lack a digital presence the opportunity to have one.</p>
+                <p>Chi Voto provides clear information about the electoral process for the European elections, including how to vote, the Italian parties with their respective electoral programs, and the list of candidates. All the information are accessible and easy to understand. Additionally, the portal serves as a tool to support a democratic electoral process by giving candidates who lack a digital presence the opportunity to have one.</p>
                 <h2>More info</h2>
                 <ul>
                     <li>Cristina Guarda, one of the candidates we provided visibility to on our platform, has been elected to the European Parliament. Watch her <a href="https://www.instagram.com/reel/C762p7Jo5dB/?igsh=dGJ2OHN0cnQ3MXB1" target="_blank">video</a>;</li>
@@ -132,7 +132,7 @@
         <hr>
         <div class="text">
             <h1>WJR Turismo</h1>
-            <h3>Freelancing</h3>
+            <h3>Freelance</h3>
             <h4>Sales management web system for a medium-sized travel agency in my hometown.</h4>
             <h2>Problem:</h2>
             <p>With two offices in different cities and numerous travel agents, the owner responsible for sales management used to receive an Excel spreadsheet from each employee at the end of the month to process profits and commissions. This system caused delays and inconsistencies, as employees could input and edit information freely, leading to a lack of standardization and reliability.</p>
